--- a/code/networks/create_networks.ipynb
+++ b/code/networks/create_networks.ipynb
@@ -2,381 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d1418571",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "from networkx.drawing.nx_agraph import graphviz_layout\n",
-    "import pygraphviz as pgv"
+    "import networkx as nx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "950f220e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "countrys = pd.read_csv('../../data/countries.csv', header=0)\n",
+    "countries = pd.read_csv('../../data/countries.csv', header=0)\n",
     "cities = pd.read_csv('../../data/cities.csv', header=0)\n",
     "\n",
     "# Merge the Country and City columns into a single DataFrame\n",
-    "combined = pd.concat([countrys[['Country', 'StartsWith', 'EndsWith']].rename(columns={'Country': 'Name'}),\n",
+    "combined = pd.concat([countries[['Country', 'StartsWith', 'EndsWith']].rename(columns={'Country': 'Name'}),\n",
     "                      cities[['City', 'StartsWith', 'EndsWith']].rename(columns={'City': 'Name'})],\n",
     "                     ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ac4f1254",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Name",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "StartsWith",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "EndsWith",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "ref": "6e35ac45-ac53-445d-896c-7255c0055336",
-       "rows": [
-        [
-         "0",
-         "Afghanistan",
-         "a",
-         "n"
-        ],
-        [
-         "1",
-         "Albania",
-         "a",
-         "a"
-        ],
-        [
-         "2",
-         "Algeria",
-         "a",
-         "a"
-        ],
-        [
-         "3",
-         "Andorra",
-         "a",
-         "a"
-        ],
-        [
-         "4",
-         "Angola",
-         "a",
-         "a"
-        ],
-        [
-         "5",
-         "Antigua and Barbuda",
-         "a",
-         "a"
-        ],
-        [
-         "6",
-         "Argentina",
-         "a",
-         "a"
-        ],
-        [
-         "7",
-         "Armenia",
-         "a",
-         "a"
-        ],
-        [
-         "8",
-         "Australia",
-         "a",
-         "a"
-        ],
-        [
-         "9",
-         "Austria",
-         "a",
-         "a"
-        ],
-        [
-         "10",
-         "Azerbaijan",
-         "a",
-         "n"
-        ],
-        [
-         "11",
-         "Bahamas",
-         "b",
-         "s"
-        ],
-        [
-         "12",
-         "Bahrain",
-         "b",
-         "n"
-        ],
-        [
-         "13",
-         "Bangladesh",
-         "b",
-         "h"
-        ],
-        [
-         "14",
-         "Barbados",
-         "b",
-         "s"
-        ],
-        [
-         "15",
-         "Belarus",
-         "b",
-         "s"
-        ],
-        [
-         "16",
-         "Belgium",
-         "b",
-         "m"
-        ],
-        [
-         "17",
-         "Belize",
-         "b",
-         "e"
-        ],
-        [
-         "18",
-         "Benin",
-         "b",
-         "n"
-        ],
-        [
-         "19",
-         "Bhutan",
-         "b",
-         "n"
-        ],
-        [
-         "20",
-         "Bolivia",
-         "b",
-         "a"
-        ],
-        [
-         "21",
-         "Bosnia and Herzegovina",
-         "b",
-         "a"
-        ],
-        [
-         "22",
-         "Botswana",
-         "b",
-         "a"
-        ],
-        [
-         "23",
-         "Brazil",
-         "b",
-         "l"
-        ],
-        [
-         "24",
-         "Brunei",
-         "b",
-         "i"
-        ],
-        [
-         "25",
-         "Bulgaria",
-         "b",
-         "a"
-        ],
-        [
-         "26",
-         "Burkina Faso",
-         "b",
-         "o"
-        ],
-        [
-         "27",
-         "Burundi",
-         "b",
-         "i"
-        ],
-        [
-         "28",
-         "Cambodia",
-         "c",
-         "a"
-        ],
-        [
-         "29",
-         "Cameroon",
-         "c",
-         "n"
-        ],
-        [
-         "30",
-         "Canada",
-         "c",
-         "a"
-        ],
-        [
-         "31",
-         "Cape Verde",
-         "c",
-         "e"
-        ],
-        [
-         "32",
-         "Central African Republic",
-         "c",
-         "c"
-        ],
-        [
-         "33",
-         "Chad",
-         "c",
-         "d"
-        ],
-        [
-         "34",
-         "Chile",
-         "c",
-         "e"
-        ],
-        [
-         "35",
-         "China",
-         "c",
-         "a"
-        ],
-        [
-         "36",
-         "Colombia",
-         "c",
-         "a"
-        ],
-        [
-         "37",
-         "Comoros",
-         "c",
-         "s"
-        ],
-        [
-         "38",
-         "Costa Rica",
-         "c",
-         "a"
-        ],
-        [
-         "39",
-         "Croatia",
-         "c",
-         "a"
-        ],
-        [
-         "40",
-         "Cuba",
-         "c",
-         "a"
-        ],
-        [
-         "41",
-         "Cyprus",
-         "c",
-         "s"
-        ],
-        [
-         "42",
-         "Czech Republic",
-         "c",
-         "c"
-        ],
-        [
-         "43",
-         "Democratic Republic of the Congo",
-         "d",
-         "o"
-        ],
-        [
-         "44",
-         "Denmark",
-         "d",
-         "k"
-        ],
-        [
-         "45",
-         "Djibouti",
-         "d",
-         "i"
-        ],
-        [
-         "46",
-         "Dominica",
-         "d",
-         "a"
-        ],
-        [
-         "47",
-         "Dominican Republic",
-         "d",
-         "c"
-        ],
-        [
-         "48",
-         "Ecuador",
-         "e",
-         "r"
-        ],
-        [
-         "49",
-         "Egypt",
-         "e",
-         "t"
-        ]
-       ],
-       "shape": {
-        "columns": 3,
-        "rows": 695
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -396,7 +54,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>Country</th>\n",
        "      <th>StartsWith</th>\n",
        "      <th>EndsWith</th>\n",
        "    </tr>\n",
@@ -439,83 +97,96 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>690</th>\n",
-       "      <td>Goyang-si</td>\n",
-       "      <td>g</td>\n",
-       "      <td>i</td>\n",
+       "      <th>190</th>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>v</td>\n",
+       "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>691</th>\n",
-       "      <td>Yulin</td>\n",
+       "      <th>191</th>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>v</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>Yemen</td>\n",
        "      <td>y</td>\n",
        "      <td>n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>692</th>\n",
-       "      <td>Jodhpur</td>\n",
-       "      <td>j</td>\n",
-       "      <td>r</td>\n",
+       "      <th>193</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>z</td>\n",
+       "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>693</th>\n",
-       "      <td>Gwalior</td>\n",
-       "      <td>g</td>\n",
-       "      <td>r</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>694</th>\n",
-       "      <td>Jingzhou</td>\n",
-       "      <td>j</td>\n",
-       "      <td>u</td>\n",
+       "      <th>194</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>z</td>\n",
+       "      <td>e</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>695 rows × 3 columns</p>\n",
+       "<p>195 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Name StartsWith EndsWith\n",
+       "         Country StartsWith EndsWith\n",
        "0    Afghanistan          a        n\n",
        "1        Albania          a        a\n",
        "2        Algeria          a        a\n",
        "3        Andorra          a        a\n",
        "4         Angola          a        a\n",
        "..           ...        ...      ...\n",
-       "690    Goyang-si          g        i\n",
-       "691        Yulin          y        n\n",
-       "692      Jodhpur          j        r\n",
-       "693      Gwalior          g        r\n",
-       "694     Jingzhou          j        u\n",
+       "190    Venezuela          v        a\n",
+       "191      Vietnam          v        m\n",
+       "192        Yemen          y        n\n",
+       "193       Zambia          z        a\n",
+       "194     Zimbabwe          z        e\n",
        "\n",
-       "[695 rows x 3 columns]"
+       "[195 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined"
+    "countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "0128ffa4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create directed graphs for countries, cities, and combined data\n",
     "\n",
-    "countrys_network = nx.DiGraph()\n",
+    "countries_network = nx.DiGraph()\n",
     "cities_network = nx.DiGraph()\n",
     "combined_network = nx.DiGraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
+   "id": "ecff8c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add nodes to the graphs\n",
+    "countries_network.add_nodes_from(countries['Country'])\n",
+    "cities_network.add_nodes_from(cities['City'])\n",
+    "combined_network.add_nodes_from(combined['Name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "410c287e",
    "metadata": {},
    "outputs": [],
@@ -523,13 +194,13 @@
     "# Build edges based on matching start and end letters\n",
     "\n",
     "for alphabet in 'abcdefghijklmnopqrstuvwxyz':\n",
-    "    countrys_end = countrys[countrys['EndsWith'] == alphabet]\n",
-    "    countrys_start = countrys[countrys['StartsWith'] == alphabet]\n",
+    "    countries_end = countries[countries['EndsWith'] == alphabet]\n",
+    "    countries_start = countries[countries['StartsWith'] == alphabet]\n",
     "    \n",
-    "    for _, end_row in countrys_end.iterrows():\n",
-    "        for _, start_row in countrys_start.iterrows():\n",
+    "    for _, end_row in countries_end.iterrows():\n",
+    "        for _, start_row in countries_start.iterrows():\n",
     "            if start_row['Country'] != end_row['Country']:\n",
-    "                countrys_network.add_edge(end_row['Country'], start_row['Country'])\n",
+    "                countries_network.add_edge(end_row['Country'], start_row['Country'])\n",
     "    \n",
     "    cities_end = cities[cities['EndsWith'] == alphabet]\n",
     "    cities_start = cities[cities['StartsWith'] == alphabet]\n",
@@ -550,20 +221,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "33f0988a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add labels to nodes\n",
+    "nx.set_node_attributes(countries_network, {node: node for node in countries_network.nodes()}, 'label')\n",
+    "nx.set_node_attributes(cities_network, {node: node for node in cities_network.nodes()}, 'label')\n",
+    "nx.set_node_attributes(combined_network, {node: node for node in combined_network.nodes()}, 'label') "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
+   "id": "a3fd8975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add startswith and endswith attributes to nodes\n",
+    "for _, row in countries.iterrows():\n",
+    "    countries_network.nodes[row['Country']]['StartsWith'] = row['StartsWith']\n",
+    "    countries_network.nodes[row['Country']]['EndsWith'] = row['EndsWith']\n",
+    "\n",
+    "for _, row in cities.iterrows():\n",
+    "    cities_network.nodes[row['City']]['StartsWith'] = row['StartsWith']\n",
+    "    cities_network.nodes[row['City']]['EndsWith'] = row['EndsWith']\n",
+    "\n",
+    "for _, row in combined.iterrows():\n",
+    "    combined_network.nodes[row['Name']]['StartsWith'] = row['StartsWith']\n",
+    "    combined_network.nodes[row['Name']]['EndsWith'] = row['EndsWith']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "dc996e93",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the networks as dot files for simplicity\n",
-    "nx.nx_agraph.write_dot(countrys_network, 'dot/countrys_network.dot')\n",
+    "nx.nx_agraph.write_dot(countries_network, 'dot/countries_network.dot')\n",
     "nx.nx_agraph.write_dot(cities_network, 'dot/cities_network.dot')\n",
     "nx.nx_agraph.write_dot(combined_network, 'dot/combined_network.dot')\n",
     "\n",
     "# Save the networks as GrapML files for compatibility\n",
-    "nx.write_graphml(countrys_network, 'graphml/countrys_network.graphml')\n",
+    "nx.write_graphml(countries_network, 'graphml/countries_network.graphml')\n",
     "nx.write_graphml(cities_network, 'graphml/cities_network.graphml')\n",
     "nx.write_graphml(combined_network, 'graphml/combined_network.graphml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55365b76",
+   "metadata": {},
+   "source": [
+    "## Letter Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0cf7397c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create directed graphs for countries, cities, and combined data\n",
+    "\n",
+    "countries_letter_net = nx.DiGraph()\n",
+    "cities_letter_net = nx.DiGraph()\n",
+    "combined_letter_net = nx.DiGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a91596de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in countries.iterrows():\n",
+    "    countries_letter_net.add_edge(row['StartsWith'], row['EndsWith'])\n",
+    "\n",
+    "for _, row in cities.iterrows():\n",
+    "    cities_letter_net.add_edge(row['StartsWith'], row['EndsWith'])\n",
+    "\n",
+    "for _, row in combined.iterrows():\n",
+    "    combined_letter_net.add_edge(row['StartsWith'], row['EndsWith'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "78c378fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.nx_agraph.write_dot(countries_letter_net, \"dot/countries_letter_net.dot\")\n",
+    "nx.nx_agraph.write_dot(cities_letter_net, \"dot/cities_letter_net.dot\")\n",
+    "nx.nx_agraph.write_dot(combined_letter_net, \"dot/combined_letter_net.dot\")\n",
+    "\n",
+    "nx.write_graphml(countries_letter_net, \"graphml/countries_letter_net.graphml\")\n",
+    "nx.write_graphml(cities_letter_net, \"graphml/cities_letter_net.graphml\")\n",
+    "nx.write_graphml(combined_letter_net, \"graphml/combined_letter_net.graphml\")\n",
+    "\n"
    ]
   },
   {
