--- a/code/networks/create_networks.ipynb
+++ b/code/networks/create_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1418571",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "950f220e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ac4f1254",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0128ffa4",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ecff8c2f",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "410c287e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "33f0988a",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a3fd8975",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dc996e93",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0cf7397c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "78c378fd",
    "metadata": {},
    "outputs": [],
@@ -325,6 +325,34 @@
     "nx.write_graphml(cities_letter_net, \"graphml/cities_letter_net.graphml\")\n",
     "nx.write_graphml(combined_letter_net, \"graphml/combined_letter_net.graphml\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b8b8ec5",
+   "metadata": {},
+   "source": [
+    "### Line Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c8cca3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_line = nx.line_graph(country_net)\n",
+    "city_line = nx.line_graph(city_net)\n",
+    "combined_line = nx.line_graph(combined_net)\n",
+    "\n",
+    "nx.nx_agraph.write_dot(country_line, \"dot/country_line.dot\")\n",
+    "nx.nx_agraph.write_dot(city_line, \"dot/city_line.dot\")\n",
+    "nx.nx_agraph.write_dot(combined_line, \"dot/combined_line.dot\")\n",
+    "\n",
+    "nx.write_graphml(country_line, \"graphml/country_line.graphml\")\n",
+    "nx.write_graphml(city_line, \"graphml/city_line.graphml\")\n",
+    "nx.write_graphml(combined_line, \"graphml/combined_line.graphml\")"
    ]
   },
   {
