--- a/code/networks/create_networks.ipynb
+++ b/code/networks/create_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1418571",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "950f220e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ac4f1254",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "[195 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0128ffa4",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ecff8c2f",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "410c287e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "33f0988a",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a3fd8975",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dc996e93",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0cf7397c",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a91596de",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "78c378fd",
    "metadata": {},
    "outputs": [],
@@ -337,22 +337,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1c8cca3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_line = nx.line_graph(country_net)\n",
-    "city_line = nx.line_graph(city_net)\n",
-    "combined_line = nx.line_graph(combined_net)\n",
+    "countries_line = nx.line_graph(countries_network)\n",
+    "cities_line = nx.line_graph(cities_network)\n",
+    "combined_line = nx.line_graph(combined_network)\n",
     "\n",
-    "nx.nx_agraph.write_dot(country_line, \"dot/country_line.dot\")\n",
-    "nx.nx_agraph.write_dot(city_line, \"dot/city_line.dot\")\n",
+    "nx.nx_agraph.write_dot(countries_line, \"dot/countries_line.dot\")\n",
+    "nx.nx_agraph.write_dot(cities_line, \"dot/cities_line.dot\")\n",
     "nx.nx_agraph.write_dot(combined_line, \"dot/combined_line.dot\")\n",
     "\n",
-    "nx.write_graphml(country_line, \"graphml/country_line.graphml\")\n",
-    "nx.write_graphml(city_line, \"graphml/city_line.graphml\")\n",
+    "nx.write_graphml(countries_line, \"graphml/countries_line.graphml\")\n",
+    "nx.write_graphml(cities_line, \"graphml/cities_line.graphml\")\n",
     "nx.write_graphml(combined_line, \"graphml/combined_line.graphml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f8c1ec32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries_letter_line = nx.line_graph(countries_letter_net)\n",
+    "cities_letter_line = nx.line_graph(cities_letter_net)\n",
+    "combined_letter_line = nx.line_graph(combined_letter_net)\n",
+    "\n",
+    "nx.nx_agraph.write_dot(countries_letter_line, \"dot/countries_letter_line.dot\")\n",
+    "nx.nx_agraph.write_dot(cities_letter_line, \"dot/cities_letter_line.dot\")\n",
+    "nx.nx_agraph.write_dot(combined_letter_line, \"dot/combined_letter_line.dot\")\n",
+    "\n",
+    "nx.write_graphml(countries_letter_line, \"graphml/countries_letter_line.graphml\")\n",
+    "nx.write_graphml(cities_letter_line, \"graphml/cities_letter_line.graphml\")\n",
+    "nx.write_graphml(combined_letter_line, \"graphml/combined_letter_line.graphml\")"
    ]
   },
   {
