Embeddings using node2vec

--- a/code/node2vec/embeddings.ipynb
+++ b/code/node2vec/embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "58a8062c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "08d80f1f",
    "metadata": {},
    "outputs": [],
@@ -23,11 +23,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e35294b",
+   "execution_count": 38,
+   "id": "422f00c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Namibia\n",
+      "Nauru\n",
+      "Nepal\n",
+      "Netherlands\n",
+      "New Zealand\n",
+      "Nicaragua\n",
+      "Niger\n",
+      "Nigeria\n",
+      "North Korea\n",
+      "North Macedonia\n",
+      "Norway\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s, t in graph.edges():\n",
+    "    if s == \"Azerbaijan\": print(t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "91a2db18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fun(p, q):\n",
+    "    # Genereate Walks\n",
+    "    node2vec = n2v.Node2Vec(graph, dimensions=64, walk_length=50, num_walks=500, p=p, q=q)\n",
+    "    # Embed nodes\n",
+    "    model = node2vec.fit(window=10, min_count=1, batch_words=4)\n",
+    "    # Save embeddings for later use\n",
+    "    model.wv.save(f\"node/node2vec_64_50_500_p{p}_q{str(q).replace('.', '_')}.kv\")\n",
+    "    # Save model for later use\n",
+    "    model.save(f\"model/node2vec_64_50_500_p{p}_q{str(q).replace('.' , '_')}.model\")\n",
+    "    # Embed edges\n",
+    "    edge_embeds = n2v.edges.HadamardEmbedder(model.wv)\n",
+    "    edges_kv = edge_embeds.as_keyed_vectors()\n",
+    "    # Save embeddings for later use\n",
+    "    edges_kv.save(f\"edge/edge_embeddings_64_50_500_p{p}_q{str(q).replace('.', '_')}.kv\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e3b7014d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91b1e3026d98450fb26c77e5eb157c51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Computing transition probabilities:   0%|          | 0/195 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating walks (CPU: 1): 100%|██████████| 500/500 [00:34<00:00, 14.44it/s]\n",
+      "Generating edge features: 100%|██████████| 19110/19110.0 [00:00<00:00, 55431.29it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fun(1, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ccb499d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
