--- a/code/analysis/analyse_letter_nets copy.ipynb
+++ b/code/analysis/analyse_letter_nets copy.ipynb
@@ -365,20 +365,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8e1512a",
+   "cell_type": "markdown",
+   "id": "826ce039",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Self - Loops"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "e8e1512a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Self-loops: [('a', 'a'), ('s', 's'), ('c', 'c')]\n",
+      "Number of self-loops: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Self-loops:\", list(nx.selfloop_edges(country_net)))\n",
+    "print(\"Number of self-loops:\", nx.number_of_selfloops(country_net))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "41105882",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Self loops: [('s', 's'), ('g', 'g'), ('k', 'k'), ('a', 'a'), ('o', 'o'), ('t', 't'), ('d', 'd'), ('w', 'w')]\n",
+      "Number of self loops: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Self loops:\", list(nx.selfloop_edges(city_net)))\n",
+    "print(\"Number of self loops:\", nx.number_of_selfloops(city_net))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4268d5f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Self-loops: [('a', 'a'), ('s', 's'), ('o', 'o'), ('c', 'c'), ('d', 'd'), ('k', 'k'), ('t', 't'), ('g', 'g'), ('w', 'w')]\n",
+      "Number of self-loops: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Self-loops:\", list(nx.selfloop_edges(combined_net)))\n",
+    "print(\"Number of self-loops:\", nx.number_of_selfloops(combined_net))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed66225",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
