--- a/code/analysis/analyse_nodes.ipynb
+++ b/code/analysis/analyse_nodes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "29f0c796",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "df25c492",
    "metadata": {},
    "outputs": [],
@@ -710,6 +710,32 @@
    "source": [
     "pd.read_csv(\"parity/country_parity_adv.csv\", index_col=0, header=0).loc[\"Antigua and Barbuda\"].values[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9623645c",
+   "metadata": {},
+   "source": [
+    "## Self Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb69253a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Number of Self Loops in Country Net:\", nx.number_of_selfloops(country_net))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace8762e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
