--- a/code/networks/create_networks.ipynb
+++ b/code/networks/create_networks.ipynb
@@ -29,8 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ac4f1254",
+   "execution_count": 6,
+   "id": "8f4a08ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StartsWith\n",
+       "a    9\n",
+       "s    4\n",
+       "c    2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries[countries.StartsWith==countries.EndsWith].StartsWith.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e1c14d9e",
    "metadata": {},
    "outputs": [
     {
@@ -61,100 +86,97 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>a</td>\n",
+       "      <th>117</th>\n",
+       "      <td>Namibia</td>\n",
        "      <td>n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>a</td>\n",
        "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>a</td>\n",
+       "      <th>118</th>\n",
+       "      <td>Nauru</td>\n",
+       "      <td>n</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>n</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>n</td>\n",
+       "      <td>s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>n</td>\n",
+       "      <td>d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>Nicaragua</td>\n",
+       "      <td>n</td>\n",
        "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
+       "      <th>123</th>\n",
+       "      <td>Niger</td>\n",
+       "      <td>n</td>\n",
+       "      <td>r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>Venezuela</td>\n",
-       "      <td>v</td>\n",
+       "      <th>124</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>n</td>\n",
        "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>v</td>\n",
-       "      <td>m</td>\n",
+       "      <th>125</th>\n",
+       "      <td>North Korea</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>Yemen</td>\n",
+       "      <th>126</th>\n",
+       "      <td>North Macedonia</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>n</td>\n",
        "      <td>y</td>\n",
-       "      <td>n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>z</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>z</td>\n",
-       "      <td>e</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>195 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Country StartsWith EndsWith\n",
-       "0    Afghanistan          a        n\n",
-       "1        Albania          a        a\n",
-       "2        Algeria          a        a\n",
-       "3        Andorra          a        a\n",
-       "4         Angola          a        a\n",
-       "..           ...        ...      ...\n",
-       "190    Venezuela          v        a\n",
-       "191      Vietnam          v        m\n",
-       "192        Yemen          y        n\n",
-       "193       Zambia          z        a\n",
-       "194     Zimbabwe          z        e\n",
-       "\n",
-       "[195 rows x 3 columns]"
+       "             Country StartsWith EndsWith\n",
+       "117          Namibia          n        a\n",
+       "118            Nauru          n        u\n",
+       "119            Nepal          n        l\n",
+       "120      Netherlands          n        s\n",
+       "121      New Zealand          n        d\n",
+       "122        Nicaragua          n        a\n",
+       "123            Niger          n        r\n",
+       "124          Nigeria          n        a\n",
+       "125      North Korea          n        a\n",
+       "126  North Macedonia          n        a\n",
+       "127           Norway          n        y"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries"
+    "countries[(countries.StartsWith == 'n')]"
    ]
   },
   {
